kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charity-donation
  labels:
    app: charity-donation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: charity-donation
  template:
    metadata:
      labels:
        app: charity-donation
    spec:
      containers:
      - name: web
        image: charity-donation_web
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      - name: app
        image: charity-donation_app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: charity-donation
spec:
  selector:
    app: charity-donation
  ports:
  - name: http
    port: 80
